--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,7 @@
       </a>
     </div>
     <ul class="menupunkter">
-      <li><a href="/">Shop</a></li>
+      <li><a href="/">Shop ↓</a></li>
       <li><a href="/thebar">The Winebar</a></li>
       <li><a href="/aboutus">About Us</a></li>
       <li><img src="/cart-red.webp" alt="" /></li>
