--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -6,7 +6,13 @@
       </a>
     </div>
     <ul class="menupunkter">
-      <li><a href="/">Shop ↓</a></li>
+      <div class="dropdown">
+        <a id="shop">Shop ↓</a>
+        <div class="sub-menu">
+          <a href="/listeview">Wine</a>
+          <a href="/notwine">Not wine</a>
+        </div>
+      </div>
       <li><a href="/thebar">The Winebar</a></li>
       <li><a href="/aboutus">About Us</a></li>
       <li><img src="/cart-red.webp" alt="" /></li>
