--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -18,9 +18,7 @@
       <a class="winebar" href="/thebar">The Winebar</a>
     </li>
     <li class="nav-item">
-      <div class="dropdown">
-        <button class="dropbtn"> <a href="/aboutus">About Us</a></button>
-      </div>
+      <a href="/aboutus">About Us</a>
     </li>
     <li>
       <img class="cart" src="/cart_red.svg" alt="" />
