--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -153,6 +153,7 @@
       width: 100%;
       text-align: center;
       transition: 0.3s;
+      display: block;
     }
     .dropbtn {
       background-color: #f3f3eb;
@@ -180,7 +181,7 @@
     }
 
     .hamburger.active .bar:nth-child(3) {
-      transform: translateY(-8px) rotate(-45deg);
+      transform: translateY(-9px) rotate(-45deg);
     }
 
     .sub-menu {
