--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -21,7 +21,9 @@
       <a href="/aboutus">About Us</a>
     </li>
     <li>
-      <img class="cart" src="/cart_red.svg" alt="" />
+      <div class="cart">
+        <img src="/cart_red.svg" alt="" />
+      </div>
     </li>
   </ul>
   <div class="hamburger">
@@ -33,9 +35,13 @@
 
 <style>
   .cart {
-    width: 30%;
-    margin-top: -2%;
+    margin-top: -3%;
     cursor: pointer;
+    flex-shrink: 0;
+  }
+  .cart img {
+    max-width: 35px;
+    height: auto;
   }
   .navbar {
     background-color: white;
@@ -137,9 +143,14 @@
   .nav-menu {
     display: grid;
     grid-template-columns: 1fr 1.28fr 1fr 1fr;
+    flex-shrink: 0;
+  }
+  .nav-menu li {
+    max-width: 200px;
+    height: auto;
   }
 
-  @media only screen and (max-width: 700px) {
+  @media only screen and (max-width: 1120px) {
     .cart {
       width: 10%;
       margin-top: 0%;
