--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -150,7 +150,16 @@
     height: auto;
   }
 
-  @media only screen and (max-width: 1120px) {
+  @media only screen and (max-width: 700px) {
+    .cart {
+      margin-top: -3%;
+      cursor: pointer;
+      flex-shrink: 0;
+    }
+    .cart img {
+      max-width: 35px;
+      height: auto;
+    }
     .logo img {
       max-width: 120px;
       height: auto;
