--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -150,7 +150,7 @@
     height: auto;
   }
 
-  @media only screen and (max-width: 700px) {
+  @media only screen and (max-width: 1100px) {
     .cart {
       margin-top: -3%;
       cursor: pointer;
@@ -168,17 +168,18 @@
       position: fixed;
       left: -150%;
       top: -1rem;
-      padding: 6rem 0rem 3rem 7rem;
+      padding: 6rem 0rem 3rem 0rem;
       background-color: #f3f3eb;
       width: 100%;
       text-align: center;
       transition: 0.3s;
       display: grid;
-      grid-template-columns: 1fr;
-      grid-template-rows: 1.22fr 1fr 1fr 1fr;
+      grid-template-columns: 1fr 1fr 1fr;
+      grid-template-rows: 1.3fr 1.2fr 1.2fr 1fr;
     }
     li {
-      margin-bottom: 9%;
+      grid-column: 2;
+      margin-bottom: 15%;
     }
 
     .nav-menu.active {
