--- a/src/pages/singleview/[slug].astro
+++ b/src/pages/singleview/[slug].astro
@@ -174,7 +174,9 @@ const { wine } = Astro.props;
         margin-left: 2%;
         margin-bottom: -7%;
       }
-
+      .product {
+        margin-left: 15px;
+      }
       .grid2 {
         display: grid;
         grid-template-columns: 1fr 2fr;
@@ -191,7 +193,7 @@ const { wine } = Astro.props;
         margin-left: 2%;
       }
       .description {
-        margin-right: -250px;
+        margin-right: -190px;
       }
       .image-container {
         width: 140px;
@@ -199,10 +201,10 @@ const { wine } = Astro.props;
       }
       .kategorier li {
         margin-bottom: 5%;
-        margin-right: -250px;
+        margin-right: -190px;
       }
       .price {
-        margin-right: -250px;
+        margin-right: -190px;
       }
     }
   </style>
