--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,6 +9,14 @@ import Footer from "../components/Footer.astro";
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
+    <meta
+      name="description"
+      content="Discover a world of authentic and organic natural wines. 
+      Explore our handpicked selection of wines crafted with respect for nature. 
+      Experience the subtle balance of flavor, terroir, and sustainability. 
+      Browse our curated collection of natural wines from passionate producers. 
+      Elevate your wine journey with the essence of nature's finest."
+    />
     <meta name="keywords" content="wine, winebar, vinbar, wineshop, vinshop, naturvin, naturvin nørrebro, 
     natural wine, natural wine copenhagen, local, local wine, organic wine, organic, vinbar københavn, 
     vinbar nørrebro, winebar copenhagen" />
