--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -1,5 +1,5 @@
 ---
-const { id, picture, picture2, name, type, love, link, text } = Astro.props;
+const { picture, picture2, name, type, love, link, text } = Astro.props;
 ---
 
 <html lang="en">
