--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@
   <ul class="nav-menu">
     <li class="nav-item">
       <div class="dropdown">
-        <a href="#" id="shop" class="menu-arrow">Shop ↓</a>
+        <a id="shop" class="menu-arrow">Shop ↓</a>
         <div class="sub-menu">
           <a href="/listeview">Wine</a>
           <a href="/notwine">Not wine</a>
