--- a/src/components/Card.astro
+++ b/src/components/Card.astro
@@ -5,7 +5,7 @@ const { picture, picture2, name, type, love, link, text } = Astro.props;
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="icon" type="image/svg+xml" href="/red_favicon.svg" />
     <meta name="viewport" content="width=device-width" />
     <meta name="generator" content={Astro.generator} />
     <meta name="keywords" content="wine, winebar, vinbar, wineshop, vinshop, naturvin, natural wine, local, local wine, organic wine, organic, vinbar københavn, vinbar nørrebro, winebar copenhagen" />
